[package]
name = "cores_ext"
version = "0.1.0"
authors = ["cdcdx <cdcdx888@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/cdcdx/cores_ext"
documentation = "https://docs.rs/cores_ext"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.134"
num_cpus = "1.14.0"
procfs = "0.14.1"
